# libntr

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: libntr.h
include/libntr/fmt/: Common.h  NCLR.h  vram.h
include/libntr/fs/: binaryFile.h
include/libntr/gfx/: palette.h
source/fmt/: Common.c  NCLR.c
source/fs/: binaryFile.c
source/gfx/: palette.c
